Cadastro, edição de produtos e carrinho finalizados
erro no código, ajeitar depois

Co-authored-by: RenonHG <RenonHG@users.noreply.github.com>

--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -79,3 +79,12 @@ th a:hover {
 #carrinho button {
     margin: 30px;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.operacao-menos:hover {
+
+}
