--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@
     color: white;
 }
 
+.escondido {
+    display: none !important;
+    filter: saturate(0);
+}
+
 body {
     background-color: #4C3E5D;
     color: white;
