--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -75,6 +75,11 @@
     border-width: 2px;
     border-color: #ffcc80;
     box-shadow: 0px 0px 10px #ffcc80;
+    /* object-fit: cover; */
+    width: 100px !important;
+    height: 100px !important;
+    max-width: 100px !important;
+    max-height: 100px !important;
 }
 
 #menu .dropdown-conteudo {
