Finalização das vendas e organizações gerais
co-authored-by: RenonHG <renongusson@gmail.com>

--- a/assets/css/editar-produto.css
+++ b/assets/css/editar-produto.css
@@ -20,9 +20,10 @@
 }
 
 #editar-produto form.caixa{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   padding: 20px 30px;
   gap: 40px;
-  display: flex;
   width: 70%;
 
 }
