--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -24,16 +24,16 @@ h1 {
     margin: 20px 0;
 }
 
-th {
+#carrinho th {
     font-size: 28px;
 }
 
-td {
+#carrinho td {
     font-size: 24px;
 }
  
 
-th, td {
+#carrinho th, #carrinho td {
     display: flex;
     align-items: center;
     justify-content: start;
@@ -43,17 +43,17 @@ th, td {
     gap: 20px;
 }
 
-th:not(:first-child), td:not(:first-child) {
+#carrinho th:not(:first-child), #carrinho td:not(:first-child) {
     flex: 3;
 }
 
-th a {
+#carrinho th a {
     text-decoration: none;
     transition: 500ms;
     color: black;
 }
 
-th a:hover {
+#carrinho th a:hover {
     color: red;
 }
 
